--- a/NurseryPolije/app/src/main/res/layout/activity_lupa_password.xml
+++ b/NurseryPolije/app/src/main/res/layout/activity_lupa_password.xml
@@ -42,7 +42,9 @@
                     style="@style/headerText"
                     android:layout_gravity="center"
                     android:layout_marginTop="40dp"
-                    android:text="Nursery Polije" />
+                    android:text="Nursery Polije"
+                    android:textSize="50sp"
+                    android:fontFamily="@font/signatra"/>
 
                 <include layout="@layout/layout_lupass" />
 
@@ -61,7 +63,8 @@
         android:layout_marginRight="26dp"
         android:layout_marginBottom="40dp"
         android:background="@drawable/kembali"
-        android:text="Kembali" />
+        android:text="Kembali"
+        android:fontFamily="@font/bebas"/>
 
 
 </RelativeLayout>
