--- a/NurseryPolije/app/src/main/res/layout/activity_tagihan.xml
+++ b/NurseryPolije/app/src/main/res/layout/activity_tagihan.xml
@@ -41,7 +41,8 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent"
+                android:fontFamily="@font/cl_bold"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
