--- a/NurseryPolije/app/src/main/res/layout/activity_ubah_password.xml
+++ b/NurseryPolije/app/src/main/res/layout/activity_ubah_password.xml
@@ -21,15 +21,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Ubah Password"
-            android:textStyle="bold"
+            android:fontFamily="@font/signatra"
             android:textColor="@color/putih"
             android:textAlignment="center"
             android:gravity="center"
-            android:textSize="18dp" />
+            android:textSize="35sp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <include
-        layout="@layout/ubah_pass"/>
+    <include layout="@layout/ubah_pass" />
 
 </RelativeLayout>
