--- a/NurseryPolije/app/src/main/res/layout/activity_dikemas.xml
+++ b/NurseryPolije/app/src/main/res/layout/activity_dikemas.xml
@@ -22,11 +22,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Pesanan Dikemas"
-            android:textStyle="bold"
             android:textColor="@color/putih"
             android:textAlignment="center"
             android:gravity="center"
-            android:textSize="18dp" />
+            android:textSize="35sp"
+            android:fontFamily="@font/signatra"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -77,7 +77,8 @@
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
+        android:fontFamily="@font/bertina"/>
 
     <ProgressBar
         android:id="@+id/progressbar"
