--- a/NurseryPolije/app/src/main/res/layout/item_list_dikemas.xml
+++ b/NurseryPolije/app/src/main/res/layout/item_list_dikemas.xml
@@ -49,12 +49,13 @@
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:textColor="@android:color/black"
-                android:textSize="14sp"
+                android:textSize="15sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/tvKeterangan"
                 app:layout_constraintTop_toBottomOf="@+id/tvKeterangan"
-                tools:text="@tools:sample/lorem/random" />
+                tools:text="@tools:sample/lorem/random"
+                android:fontFamily="@font/bertina"/>
 
             <TextView
                 android:id="@+id/tvAlamatPengirimanDikemas"
@@ -66,14 +67,15 @@
                 android:layout_marginBottom="8dp"
                 android:ellipsize="end"
                 android:maxLines="2"
-                android:textSize="12sp"
+                android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvTanggalDikemas"
                 app:layout_constraintVertical_bias="0.0"
-                tools:text="@tools:sample/lorem/random" />
+                tools:text="@tools:sample/lorem/random"
+                android:fontFamily="@font/bertina"/>
 
             <TextView
                 android:id="@+id/tvKeterangan"
@@ -83,12 +85,13 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:textSize="12sp"
+                android:textSize="15sp"
                 android:text="Dikemas"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:fontFamily="@font/bertina"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
