--- a/NurseryPolije/app/src/main/res/layout/item_list_keranjang.xml
+++ b/NurseryPolije/app/src/main/res/layout/item_list_keranjang.xml
@@ -55,7 +55,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:ignore="MissingConstraints"
-                tools:text="@tools:sample/lorem/random" />
+                tools:text="@tools:sample/lorem/random"
+                android:fontFamily="@font/bertina"/>
 
             <TextView
                 android:id="@+id/tvTotalHargaKeranjang"
@@ -74,7 +75,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvNamaBungaKeranjang"
                 app:layout_constraintVertical_bias="0.0"
-                tools:text="@tools:sample/lorem/random" />
+                tools:text="@tools:sample/lorem/random"
+                android:fontFamily="@font/bertina"/>
 
             <TextView
                 android:id="@+id/tvJumlahBeliKeranjang"
