--- a/NurseryPolije/app/src/main/res/layout/item_list_tagihan.xml
+++ b/NurseryPolije/app/src/main/res/layout/item_list_tagihan.xml
@@ -39,7 +39,8 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:text="@tools:sample/lorem/random"
-                tools:ignore="MissingConstraints" />
+                tools:ignore="MissingConstraints"
+                android:fontFamily="@font/bertina"/>
 
             <TextView
                 android:id="@+id/tvAlamatPengiriman"
@@ -58,7 +59,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvTotal"
                 app:layout_constraintVertical_bias="0.0"
-                tools:text="@tools:sample/lorem/random" />
+                tools:text="@tools:sample/lorem/random"
+                android:fontFamily="@font/bertina"/>
 
             <TextView
                 android:id="@+id/tvTotal"
@@ -72,7 +74,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintTop_toBottomOf="@+id/tvTanggalTransaksi"/>
+                app:layout_constraintTop_toBottomOf="@+id/tvTanggalTransaksi"
+                android:fontFamily="@font/bertina"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
