--- a/NurseryPolije/app/src/main/res/layout/row.xml
+++ b/NurseryPolije/app/src/main/res/layout/row.xml
@@ -21,6 +21,7 @@
             android:text="Pertanyaan"
             android:textSize="22sp"
             android:padding="16dp"
+            android:fontFamily="@font/bertina"
             android:textColor="@color/black"
             />
 
@@ -34,6 +35,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/jawaban"
                 android:text="jawaban"
+                android:fontFamily="@font/bertina"
                 android:padding="16dp"
                 android:textSize="18sp"
                 android:textStyle="bold"
