--- a/NurseryPolije/app/src/main/res/layout/ubah_pass.xml
+++ b/NurseryPolije/app/src/main/res/layout/ubah_pass.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="100dp"
         android:text="Pastikan password baru anda berbeda dengan password yg sebelumnya."
         app:layout_constraintEnd_toEndOf="parent"
+        android:fontFamily="@font/cl_bold"
         android:textSize="20sp"
         android:textStyle="bold"
         android:textAlignment="center"
@@ -32,7 +33,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/konfir" />
+        app:layout_constraintTop_toBottomOf="@+id/konfir"
+        android:fontFamily="@font/cl_bold"/>
 
     <EditText
         android:id="@+id/konfir"
@@ -47,7 +49,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/psbaru" />
+        app:layout_constraintTop_toBottomOf="@+id/psbaru"
+        android:fontFamily="@font/bertina"/>
 
     <EditText
         android:id="@+id/psbaru"
@@ -62,7 +65,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pslama" />
+        app:layout_constraintTop_toBottomOf="@+id/pslama"
+        android:fontFamily="@font/bertina"/>
 
     <EditText
         android:id="@+id/pslama"
@@ -77,7 +81,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pesan4" />
+        app:layout_constraintTop_toBottomOf="@+id/pesan4"
+        android:fontFamily="@font/bertina"/>
 
     <Button
         android:id="@+id/simp"
@@ -90,7 +95,8 @@
         app:layout_constraintBottom_toTopOf="@+id/btl"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:fontFamily="@font/bebas"/>
 
     <Button
         android:id="@+id/btl"
@@ -103,5 +109,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:fontFamily="@font/bebas"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
